--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Trying something here</title>
-    </head>
-    <body>
-        <h1>Hello Indeed!</h1>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Stuff</title>
+</head>
+<body>
+    <h1>Another Random Header!</h1>
+</body>
 </html>
